Fix: consistancy with margin top spacing globally

--- a/mt_core/static/assets/css/style.css
+++ b/mt_core/static/assets/css/style.css
@@ -34,7 +34,7 @@ hr {
 }
 .link {
     /*text-decoration: none;*/
-    color: red;
+    color: #FF0000;
 }
 .container-fluid {
     margin-bottom: 80px;
@@ -81,7 +81,7 @@ sup {
     text-decoration: none;
     color: #f5f5f5;
     border-radius: 5px;
-    border-color: red;
+    border-color: #FF0000;
     border-width: 1px;
     border-style: solid;
     padding: 5px 10px;
@@ -89,13 +89,13 @@ sup {
     margin-bottom: 0;
 }
 .cta-btn:hover {
-    background-color: red;
+    background-color: #FF0000;
 }
 .tip-btn {
     text-decoration: none;
     color: #f5f5f5;
     border-radius: 5px;
-    border-color: red;
+    border-color: #FF0000;
     border-width: 1px;
     border-style: solid;
     padding: 2px 12px;
@@ -104,7 +104,7 @@ sup {
     vertical-align: middle;
 }
 .tip-btn:hover {
-    background-color: red;
+    background-color: #FF0000;
 }
 .tip-btn:disabled {
     outline: none;
@@ -188,10 +188,10 @@ sup {
     padding: 6px;
 }
 #data-message {
-    color: red;
+    color: #FF0000;
 }
 #fee-message {
-    color: red;
+    color: #FF0000;
 }
 
 /* Stripe API Styling */
@@ -205,10 +205,10 @@ sup {
     width: 90%;
 }
 #card-container p {
-    color: red;
+    color: #FF0000;
 }
 #card-errors {
-    color: red;
+    color: #FF0000;
     font-size: 0.9rem;
 }
 #wallet-button-container {
@@ -222,12 +222,12 @@ sup {
 
 /*404 and 500 Pages*/
 .error-pages {
-    margin-top: 80px;
+    margin-top: 6rem;
 }
 
 /* Phase 1 Report */
 .report-container {
-    margin-top: 80px;
+    margin-top: 6rem;
 }
 
 /* Media Queries */
